--- a/src/app/pages/teams-add/teams-add.component.html
+++ b/src/app/pages/teams-add/teams-add.component.html
@@ -1,3 +1,27 @@
-<p>
-  teams-add works!
-</p>
+<div class="modal show" tabindex="-1" role="dialog" style="display: block;">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add team</h5>
+                <button routerLink="/app" type="button" class="close" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form [formGroup]="formControl" (ngSubmit)="onSubmit()">
+                <div class="modal-body">                                        
+                    <app-input-wrapper [value]="formControl.controls['name']" label="Name" errorMsg="Please provide a valid name (min. 3 characters).">
+                        <input class="form-control" formControlName="name">
+                    </app-input-wrapper>
+                </div>
+                <div class="modal-footer">
+                    <button routerLink="/app" type="button" class="btn btn-secondary">Close</button>
+                    <button [disabled]="!formControl.valid" type="submit" class="btn btn-primary">
+                      {{ isLoading ? 'loading...' : 'Save changes' }}
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="modal-backdrop show"></div>
