--- a/src/app/pages/teams/teams.component.html
+++ b/src/app/pages/teams/teams.component.html
@@ -1,5 +1,17 @@
-<p>
-  teams works!
-</p>
+<h1>Teams</h1>
+<button routerLink="/app/teams/add" class="btn btn-success" type="button">Add new team</button>
+
+<div class="container">
+  <div class="row">
+    <div *ngFor="let team of teams" class="col-3 mb-3">
+      <div class="card">
+        <div class="card-body">
+            {{ team.team.name }}
+            <p><small>{{ team.is_member ? 'jest memberem' : 'nie jest memberem' }}</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <router-outlet></router-outlet>
