--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -9,7 +9,7 @@
         <a class="nav-link" routerLink="/app/account">Account</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/app/none">Logout</a>
+        <a class="nav-link" (click)="onLogout()">Logout</a>
       </li>
     </ul>
   </nav>
