Add guards and team services

--- a/src/app/pages/team/team.component.html
+++ b/src/app/pages/team/team.component.html
@@ -1,5 +1,6 @@
-<p>
-  team works!
-</p>
+<nav>
+  <div routerLink="./">Games</div>
+  <div routerLink="./edit">Edit</div>
+</nav>
 
 <router-outlet></router-outlet>
