--- a/src/app/pages/teams/teams.component.html
+++ b/src/app/pages/teams/teams.component.html
@@ -5,7 +5,7 @@
   <div class="row">
     <div *ngFor="let team of teams" class="col-3 mb-3">
       <div class="card">
-        <div class="card-body">
+        <div [routerLink]="['./team', team.team.url]" class="card-body">
             {{ team.team.name }}
             <p><small>{{ team.is_member ? 'jest memberem' : 'nie jest memberem' }}</small></p>
         </div>
