--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -1,4 +1,4 @@
-<div class="mb-5">
+<div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" routerLink="/app">BETON</a>
     <ul class="navbar-nav">
@@ -13,6 +13,11 @@
       </li>
     </ul>
   </nav>
+</div>
+
+<div class="bg-warning mb-5 p-3">
+  Temp notifications:<br>
+  <app-notifications></app-notifications>
 </div>
 
 <div class="px-5">
