--- a/src/app/pages/team-edit/members-list/members-list.component.html
+++ b/src/app/pages/team-edit/members-list/members-list.component.html
@@ -1,23 +1,36 @@
-<h2>Members</h2>
+<div class="card">
+  <div class="card-header">
+    Members
+  </div>
+  <div class="card-body">
+    <form [formGroup]="formControl" (ngSubmit)="onAddMember()">
+      <input class="form-control" formControlName="email" name="email">
+      <p *ngIf="memberAddFormMsg">{{ memberAddFormMsg }}</p>
+      <button [disabled]="!formControl.valid" type="submit" class="btn btn-primary">
+        {{ isLoading ? 'loading...' : 'Invite' }}
+      </button>
+    </form>
 
-<table>
-  <tr *ngFor="let member of members" style="border-bottom: 1px solid #eee;">
-    <td style="width: 300px;">{{ member.user.username }}<br><small>{{ member.user.email }}</small></td>
-    <td style="width: 200px;">{{ member.is_member ? 'is member' : 'not member' }}</td>
-
-    <td style="width: 300px;">
-      <div *ngIf="member.is_admin && member.is_member">
-        <span>is admin</span>
-        <button *ngIf="!member.is_creator" (click)="onUpdateMember(member._id_member, member.id_team, 0)" class="btn btn-link" type="button">remove admin</button>
-      </div>
-      <div *ngIf="!member.is_admin && member.is_member">
-        <span>is not admin</span>
-        <button *ngIf="!member.is_creator" (click)="onUpdateMember(member._id_member, member.id_team, 1)" class="btn btn-link" type="button">make admin</button>
-      </div>
-    </td>
-
-    <td style="width: 200px;">
-        <button *ngIf="!member.is_creator" (click)="onDeleteMember(member._id_member, member.id_team)" class="btn btn-link" type="button">remove member</button>
-    </td>
-  </tr>
-</table>
+    <table style="width: 100%">
+      <tr *ngFor="let member of team.members" style="border-bottom: 1px solid #eee;">
+        <td style="width: 300px;">{{ member.user.username }}<br><small>{{ member.user.email }}</small></td>
+        <td style="width: 200px;">{{ member.is_member ? 'is member' : 'not member' }}</td>
+    
+        <td style="width: 300px;">
+          <div *ngIf="member.is_admin">
+            <span>is admin</span>
+            <button *ngIf="allowAdminDelete" (click)="onUpdateMember(member._id_member, member.id_team, 0, member.id_user)" class="btn btn-link" type="button">remove admin</button>
+          </div>
+          <div *ngIf="!member.is_admin">
+            <span>is not admin</span>
+            <button (click)="onUpdateMember(member._id_member, member.id_team, 1, member.id_user)" class="btn btn-link" type="button">make admin</button>
+          </div>
+        </td>
+    
+        <td style="width: 200px;">
+            <button *ngIf="!member.is_admin" (click)="onDeleteMember(member.id_user, member.id_team)" class="btn btn-link" type="button">remove member</button>
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
