--- a/src/app/pages/team-edit/team-edit.component.html
+++ b/src/app/pages/team-edit/team-edit.component.html
@@ -1,13 +1,4 @@
-<p>
-  team-edit works!
-</p>
-
-<form [formGroup]="formControl" (ngSubmit)="onSubmit()">
-  <input class="form-control" formControlName="email" name="email">
-  <p *ngIf="memberAddFormMsg">{{ memberAddFormMsg }}</p>
-  <button [disabled]="!formControl.valid" type="submit" class="btn btn-primary">
-    {{ isLoading ? 'loading...' : 'Invite' }}
-  </button>
-</form>
-
-<app-members-list [members]="team.members"></app-members-list>
+<div *ngIf="team">
+    <app-members-list [team]="team" [allowAdminDelete]="allowAdminDelete"></app-members-list>
+    <app-team-edit-card [team]="team"></app-team-edit-card>
+</div>
