--- a/src/app/pages/teams-add/teams-add.component.html
+++ b/src/app/pages/teams-add/teams-add.component.html
@@ -1,4 +1,4 @@
-<div class="modal show" tabindex="-1" role="dialog" style="display: block;">
+<div *ngIf="canCreate" class="modal show" tabindex="-1" role="dialog" style="display: block;">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -7,19 +7,25 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form [formGroup]="formControl" (ngSubmit)="onSubmit()">
-                <div class="modal-body">                                        
-                    <app-input-wrapper [value]="formControl.controls['name']" label="Name" errorMsg="Please provide a valid name (min. 3 characters).">
-                        <input class="form-control" formControlName="name">
-                    </app-input-wrapper>
-                </div>
-                <div class="modal-footer">
-                    <button routerLink="/app" type="button" class="btn btn-secondary">Close</button>
-                    <button [disabled]="!formControl.valid" type="submit" class="btn btn-primary">
-                      {{ isLoading ? 'loading...' : 'Save changes' }}
-                    </button>
-                </div>
-            </form>
+            
+            <div *ngIf="canCreate === 'yes'">
+                <form [formGroup]="formControl" (ngSubmit)="onSubmit()">
+                    <div class="modal-body">                                        
+                        <app-input-wrapper [value]="formControl.controls['name']" label="Name" errorMsg="Please provide a valid name (min. 3 characters).">
+                            <input class="form-control" formControlName="name">
+                        </app-input-wrapper>
+                    </div>
+                    <div class="modal-footer">
+                        <button routerLink="/app" type="button" class="btn btn-secondary">Close</button>
+                        <button [disabled]="!formControl.valid" type="submit" class="btn btn-primary">
+                            {{ isLoading ? 'loading...' : 'Save changes' }}
+                        </button>
+                    </div>
+                </form>
+            </div>
+            <div *ngIf="canCreate === 'no'">
+                You can create max. 6 teams
+            </div>
         </div>
     </div>
 </div>
