--- a/src/app/pages/team-games/team-games.component.html
+++ b/src/app/pages/team-games/team-games.component.html
@@ -8,7 +8,8 @@
               <button routerLink="./game" class="btn btn-primary" type="button">Add new game</button>
           </div>
         <div *ngFor="let game of team.games" style="height: 120px; border-bottom: 1px solid #eee">
-          {{ game.player_a }} - {{ game.player_b }} <u [routerLink]="['./game', game._id_game]">edit</u>
+          {{ game.player_a }} - {{ game.player_b }} 
+          <u *ngIf="currentUser.user._id_user === game.creator_id || currentUser.is_admin" [routerLink]="['./game', game._id_game]">edit</u>
         </div>
       </div>
       <!-- Rigth -->
@@ -20,8 +21,8 @@
         </div>
         <div *ngFor="let game of team.games" style="height: 120px; border-bottom: 1px solid #eee">
           <div *ngFor="let member of team.members" style="display: inline-block; width: 250px; padding: 0 30px">
-            <app-type *ngIf="currentUserID === member.user._id_user" [type]="getType(member.user._id_user, game._id_game)" [teamID]="team._id_team" [gameID]="game._id_game"></app-type>
-            <div *ngIf="currentUserID !== member.user._id_user">{{ displayType(member.user._id_user, game._id_game) }}</div>
+            <app-type *ngIf="currentUser.user._id_user === member.user._id_user" [type]="getType(member.user._id_user, game._id_game)" [teamID]="team._id_team" [gameID]="game._id_game"></app-type>
+            <div *ngIf="currentUser.user._id_user !== member.user._id_user">{{ displayType(member.user._id_user, game._id_game) }}</div>
           </div>
         </div>
       </div>
