--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -1,25 +1,30 @@
-<div>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" routerLink="/app">BETON</a>
-    <ul class="navbar-nav">
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/app">Teams</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/app/account">Account</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" (click)="onLogout()">Logout</a>
-      </li>
-    </ul>
-  </nav>
-</div>
-
-<div class="bg-warning mb-5 p-3">
-  Temp notifications:<br>
-  <app-notifications></app-notifications>
-</div>
-
-<div *ngIf="isLoaded" class="px-5">
-  <router-outlet></router-outlet>
+<div *ngIf="isLoadedUser">
+  <div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" routerLink="/app">BETON</a>
+      <ul class="navbar-nav">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/app">Teams</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/app/account">Account</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" (click)="onLogout()">Logout</a>
+        </li>
+      </ul>
+      <div class="ml-auto text-white">
+        <app-user-menu></app-user-menu>
+      </div>
+    </nav>
+  </div>
+  
+  <div class="bg-warning mb-5 p-3">
+    Temp notifications:<br>
+    <app-notifications></app-notifications>
+  </div>
+  
+  <div *ngIf="isLoadedMembership" class="px-5">
+    <router-outlet></router-outlet>
+  </div>
 </div>
