Added alert service

--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -27,4 +27,6 @@
   <div *ngIf="isLoadedMembership" class="px-5">
     <router-outlet></router-outlet>
   </div>
+
+  <app-alert></app-alert>
 </div>
